<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.gadsnotchers.viewmodel.SubmissionViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.ProjectSubmission">

        <View
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginEnd="244dp"
            android:layout_marginBottom="524dp"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/black"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tool_bar"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:src="@drawable/gads_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/project_submission"
            app:layout_constraintEnd_toEndOf="@+id/appBarLayout"
            app:layout_constraintStart_toStartOf="@+id/appBarLayout"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/goldRange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:layout_width="450dp"
            android:layout_height="450dp"
            android:layout_marginStart="188dp"
            android:layout_marginTop="480dp"
            android:background="@drawable/circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_border"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:text="@={viewModel.firstName}"
            app:layout_constraintEnd_toStartOf="@+id/last_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:text="@={viewModel.lastName}"
            android:hint="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/firstName"
            app:layout_constraintTop_toTopOf="@+id/firstName" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:hint="@string/email_address"
            android:text="@={viewModel.emailAddress}"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="@+id/firstName"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:hint="@string/project_link"
            android:text="@={viewModel.linkToProject}"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/yellow_submit_button"
            android:text="@string/submit"
            android:onClick="@{() -> viewModel.submitResponse()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>